# crafting-interpreter

./: .gitignore  Added_features.txt  CMakeLists.txt  LICENSE  README.md  TODO.txt  current_feature.lox  current_feature_test.lox  features_added.txt  main.cpp  run_tests.sh  script.lox  test_polymorphic.cc
.github/workflows/: ci.yml
helpers/: class_method.py  meta_class.py
include/: ASTprinter.hpp  Expr.hpp  Stmt.hpp  environment.hpp  errors.hpp  interpreter.hpp  literal.hpp  lox.hpp  loxCallable.hpp  loxObject.hpp  parser.hpp  resolver.hpp  return.hpp  scanner.hpp  token.hpp  type.hpp
samples/: fibonacci.lox  fibonnaci.lox
scripts/: a.lox  script.lox
src/: ASTprinter.cpp  CMakeLists.txt  environment.cpp  errors.h  generate_ast.cpp  interpreter.cpp  literal.h  lox.cpp  lox.hpp  loxCallable.cpp  loxObject.cpp  main.cpp  parser.cpp  scanner.cpp  scanner.hpp  token.cpp  token.hpp
src/AST/: Expr.cpp  generate_ast.cpp
src/lox/: lox.cpp  lox.hpp
template_programming/: .auto_deduction.cpp.swp  auto_deduction.cpp  foreachinvoke.cpp  is_prime.cpp  is_prime2.cpp  move.cpp  passing_non_const.cpp  print.cpp  sfinae.cpp  specialmemtmpl.cpp  stack_main.cpp  stack_template.hpp  timer.cpp
tests/: a.lox  class_methods_and_attributes.lox  script.lox  test_getters.lox  var_unused.lox
tests/binaryOp/: different_type_comp.lox  division_0.lox
tests/comma/: comma.lox  comma_var_dec.lox
tests/functions/: lambda_tricky.lox  lambdas.lox
tests/ternary/: associativity.lox  ternary.lox
